# plua

./: Cargo.toml  README.md
docs/: backend.md  frontend.md  jit.md  plua.md  tinylua.sytax  vm.md
examples/: bf.rs  cranel.rs  dyn.rs  jit.c  jit1.rs  stackvm.rs
src/: bytecode.rs  compile.rs  debug.rs  emitter.rs  error.rs  eval.rs  expression.rs  intercepter.rs  interceptor.rs  jit.rs  lex.rs  lib.rs  main.rs  opcode.rs  parse.rs  parser.rs  resolver.rs  scanner.rs  statement.rs  value.rs  vm.rs
src/bf/: compile.rs  error.rs  intercept.rs  ir.rs  jit.rs  mod.rs  vm.rs
src/jit/: mod.rs
src/toy/: frontend.rs  jit.rs  mod.rs
test/: 1.txt  2.txt  3.txt  fib.txt  fib_recurerse.txt  func.lua  procedure.txt  recursion.txt  simple.lua  sum.txt
