[package]
name = "plua"
version = "0.1.0"
edition = "2021"
author = "pedrogao <1312342604@qq.com>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift = "0.81.1"
cranelift-codegen = "0.81.1"
cranelift-jit = "0.81.1"
cranelift-module = "0.81.1"
cranelift-native = "0.81.1"
dynasm = "1.2.1"
dynasmrt = "1.2.1"
num_enum = "0.5.6"
peg = "0.8.0"
structopt = "0.3.26"
thiserror = "1.0.30"
substring = "1.4.5"
